syntax = "proto3";

package pb;

message Organization {
    int64 id = 1;
    string name = 2;
}

message OrganizationCrudRequest {
    Organization organization = 1;
}

message CreateOrgRequest {
    Organization organization = 1;
}

message CreateOrgResponse {
    Organization organization = 1;
}

message OrganizationResponse {
    Organization organization = 1;
}

message AddUserToOrganizationRequest {
    int64 userID = 1;
    int64 organizationID = 2;
}

message RemoveUserFromOrganizationRequest {
    int64 userID = 1;
    int64 organizationID = 2;
}

service OrganizationService {
    rpc CreateOrganization (CreateOrgRequest) returns (CreateOrgResponse) {}
    rpc GetOrganization (OrganizationCrudRequest) returns (OrganizationResponse) {}
    rpc UpdateOrganization (OrganizationCrudRequest) returns (OrganizationResponse) {}
    rpc DeleteOrganization (OrganizationCrudRequest) returns (OrganizationResponse) {}
    rpc AddUserToOrganization (AddUserToOrganizationRequest) returns (OrganizationResponse) {}
    rpc RemoveUserFromOrganization (RemoveUserFromOrganizationRequest) returns (OrganizationResponse) {}
}
